--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.2",
+    "@vee-validate/i18n": "^4.5.9",
+    "@vee-validate/rules": "^4.5.9",
+    "axios": "^0.26.0",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.8",
+    "vee-validate": "^4.5.9",
     "vue": "^3.0.0",
+    "vue-loading-overlay": "^5.0.3",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
