--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.8",
+    "swiper": "^8.0.7",
     "vee-validate": "^4.5.9",
     "vue": "^3.0.0",
     "vue-loading-overlay": "^5.0.3",
