--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@popperjs/core": "^2.11.2",
     "@vee-validate/i18n": "^4.5.9",
     "@vee-validate/rules": "^4.5.9",
+    "@vueuse/core": "^7.7.1",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
