--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^33.0.0",
+    "@ckeditor/ckeditor5-vue": "^2.0.1",
     "@popperjs/core": "^2.11.2",
     "@vee-validate/i18n": "^4.5.9",
     "@vee-validate/rules": "^4.5.9",
@@ -18,7 +20,7 @@
     "dayjs": "^1.10.8",
     "swiper": "^8.0.7",
     "vee-validate": "^4.5.9",
-    "vue": "^3.0.0",
+    "vue": "^3.2.30",
     "vue-loading-overlay": "^5.0.3",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
