--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vee-validate/i18n": "^4.5.9",
     "@vee-validate/rules": "^4.5.9",
     "@vueuse/core": "^7.7.1",
+    "aos": "^2.3.4",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
